Enforce LF line endings for all files via .gitattributes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pyomegamatch
+name = pyomgmatch
 version = 0.1.0
 description = High-performance multi-string matcher with native C backend
 author = Davin Shearer
@@ -14,6 +14,7 @@ packages = find:
 include_package_data = True
 python_requires = >=3.8
 install_requires =
+    argcomplete>=3.6.2
     cffi>=1.15.1
 
 [options.package_data]
