solve windows native lib loading

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-.idea/
+*.egg
+*.egg-info/
+*.log
+*.pyc
+*.pyo
 .build-venv/
+.coverage
+.idea/
+.venv/
+.vscode/
+__pycache__/
+dist/
 omg/native/
+venv/
