--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extern/omgmatch"]
 	path = extern/omgmatch
-	url = http://192.168.1.217:3000/davin/omgmatch.git
+	url = https://github.com/scholarsmate/omgmatch.git
