--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,3 @@
-argcomplete==3.6.2
-black==25.1.0
-cffi==1.17.1
-click==8.1.8
-colorama==0.4.6
-coverage==7.8.0
-exceptiongroup==1.2.2
-iniconfig==2.1.0
-mypy_extensions==1.1.0
-packaging==25.0
-pathspec==0.12.1
-platformdirs==4.3.7
-pluggy==1.5.0
-pycparser==2.22
-pytest==8.3.5
-pytest-cov==6.1.1
-tomli==2.2.1
-typing_extensions==4.13.2
+# Production dependencies for pyomgmatch
+argcomplete>=3.6.2
+cffi>=1.15.1
